Finished basic setup for codehooks

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "10.4.14",
+    "codehooks-crudlify": "^1.0.8",
+    "codehooks-js": "^1.0.11",
+    "jwt-decode": "^3.1.2",
     "next": "^13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
