--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-map-gl": "^7.0.23",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
-    "react-webcam": "^7.0.1"
+    "react-webcam": "^7.0.1",
+    "react-zoom-pan-pinch": "^3.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
