--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-map-gl": "^7.0.23",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
-    "react-webcam": "^7.0.1"
+    "react-webcam": "^7.0.1",
+    "tailwindcss": "^3.3.1"
   }
 }
