--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-google-maps/api": "^2.18.1",
     "codehooks-crudlify": "^1.0.8",
     "codehooks-js": "^1.0.11",
+    "headlessui": "^0.0.0",
     "jwt-decode": "^3.1.2",
     "mapbox-gl": "^2.14.1",
     "moment": "^2.29.4",
