--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
     "react-webcam": "^7.0.1",
-    "react-zoom-pan-pinch": "^3.0.7"
+    "react-zoom-pan-pinch": "^3.0.7",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
